# boring

./: Cargo.toml  README.md
boring/: Cargo.toml
boring-sys/: Cargo.toml  build.rs  pin_commit
boring-sys/patches/: boringssl-old-ciphers.patch  revert-repeated-signature-algorithm.patch
boring/examples/: fips_enabled.rs  mk_certs.rs
boring/src/: bio.rs  lib.rs
boring/src/ssl/: bio.rs  cert_compression.rs  mod.rs
boring/src/ssl/test/: mod.rs
boring/src/x509/: mod.rs
hyper-boring/: Cargo.toml
hyper-boring/src/: cache.rs  lib.rs  test.rs
scripts/: publish.sh
tokio-boring/: Cargo.toml  README.md
tokio-boring/examples/: simple-async.rs
tokio-boring/src/: lib.rs
tokio-boring/tests/: async_get_session.rs  async_private_key_method.rs  async_select_certificate.rs  client_server.rs  google.rs
tokio-boring/tests/common/: mod.rs
