[package]
name = "boring-sys-imp"
version = "2.0.6"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Steven Fackler <sfackler@gmail.com>",
           "Ivan Nikulin <ifaaan@gmail.com>"]
license = "MIT"
description = "FFI bindings to BoringSSL"
repository = "https://github.com/cloudflare/boring"
documentation = "https://docs.rs/boring-sys"
links = "boringssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
edition = "2018"
include = [
    "/*.md",
    "/*.toml",
    "/LICENSE-MIT",
    "/deps/boringssl/**/*.[chS]",
    "/deps/boringssl/**/*.asm",
    "/deps/boringssl/src/**/*.cc",
    "/deps/boringssl/**/CMakeLists.txt",
    "/deps/boringssl/**/sources.cmake",
    "/deps/boringssl/src/util/**",
    "/deps/boringssl/LICENSE",
    "/patches",
    "/build.rs",
    "/src",
]

[build-dependencies]
bindgen = { version = "0.69.1", default-features = false, features = ["runtime"], optional = true }
old_bindgen = { package = "bindgen", version = "0.60.1", default-features = false, features = ["runtime"], optional = true }
cmake = "0.1"

[features]
default = ["dep:bindgen"]
old_bindgen = ["dep:old_bindgen"]
# Use a FIPS-validated version of boringssl.
fips = []
