[package]
name = "hyper-boring-imp"
version = "2.1.5"
authors = ["Steven Fackler <sfackler@gmail.com>", "Ivan Nikulin <ifaaan@gmail.com>"]
edition = "2018"
description = "Hyper TLS support via BoringSSL"
license = "MIT/Apache-2.0"
repository = "https://github.com/cloudflare/boring"
documentation = "https://docs.rs/hyper-boring"
readme = "README.md"
exclude = ["test/*"]

[features]
default = ["runtime"]

runtime = ["hyper/runtime"]
fips = ["tokio-boring-imp/fips"]

[dependencies]
antidote = "1.0.0"
http = "0.2.11"
hyper = { package = "hyper_imp", version = "0.14.30", default-features = false, features = ["client"] }
linked_hash_set = "0.1"
once_cell = "1.0"
boring-imp = { version = ">=1.1.0,<3.0.0", path = "../boring" }
tokio = "1"
tokio-boring-imp = { version = "2", path = "../tokio-boring" }
tower-layer = "0.3"

[dev-dependencies]
hyper = { package = "hyper_imp", version = "0.14.30", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
